--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,57 @@ body {
     background-position:center;
     background-attachment:fixed;
 }
+
+#scrolldown, #scrolldown:before {
+    position: absolute
+}
+
+#scrolldown {
+    width: 40px;
+    height: 70px;
+    box-shadow: inset 0 0 0 1px white;
+    border-radius: 25px;
+    opacity: 0.4;
+    margin-left: 49%;
+    margin-top:10px;
+}
+
+#scrolldown:before {
+    content: '';
+    width: 8px;
+    height: 8px;
+    background: white;
+    margin-left: -4px;
+    top: 8px;
+    border-radius: 4px;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-name: scroll;
+    left: 50%
+}
+@keyframes scroll {
+    0% {
+        opacity: 0.75
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(46px)
+    }
+}
+
+section[ id= "1"]:target ~ section[ id= "1"] {
+    -webkit-transform: translateY( 0px);
+    transform: translateY( 0px );
+    height: 100%
+}
+
+section[ id= "2"]:target ~ section[ id= "2"] {
+    -webkit-transform: translateY( -500px);
+    transform: translateY( -500px );
+    height: 100%
+}
+
+section[ id= "3"]:target ~ section[ id= "3"] {
+    -webkit-transform: translateY( -1000px);
+    transform: translateY( -1000px );
+}
